# QUnfold

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Doxyfile  LICENSE  README.md  install_roounfold.sh  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup_env.sh  tox.ini
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: DocGenerator.yml  codeql-analysis.yml  codeql.yml  docker-image.yml  python-package.yml  python-publish.yml
config/: distributions.json
data/breit-wigner/: meas.txt  meas_bin_content.txt  meas_bin_err.txt  response.txt  truth_bin_content.txt  truth_bin_err.txt
data/bw/: truth.txt
data/distributions/: falling.csv  peak.csv
data/double-peaked/: meas_bin_content.txt  meas_bin_err.txt  response.txt  truth_bin_content.txt  truth_bin_err.txt
data/falling-small-data/: binning.txt  meas_bin_content.txt  meas_bin_err.txt  truth_bin_content.txt  truth_bin_err.txt
data/normal/: binning.txt  meas.txt  truth.txt  (+5 more)
docs/: Makefile
examples/: ROOT_simulated_annealing.py  dask_simneal_notebook.ipynb  numpy_simulated_annealing.py  simneal_notebook.ipynb  simneal_script.py  standard.py
qaoa_pennylane/: B_matrix.txt  a_vector.txt  qunfold_pennylane_lightning.py  qunfold_pennylane_optax.py  requirements.txt  upper_bounds.txt
scripts/: create_distr_config.sh  doxygen_filter.py  fetchROOT.sh  fetchRooUnfold.sh  fill_requirements.sh  py_filter.sh
src/: requirements.txt  run_test.py  setup.py
studies/: QUnfolder.py  RooUnfold.py  analysis.py  comparison.py  comparisons.py  generator.py  mergescript.cpp  new_processing.py  paper.py  paper_acat.py  pre_processing.py  processing.py  qunfold.py  root_converter.py  roounfold.py  tox.ini  unfolder.py
tests/: test_FromROOT.py  test_QUnfoldQUBO.py  test_temp.py  test_utility.py  test_utils.py
utils/: custom_logging.py
(+103 files in other folders)
