[metadata]
name = QUnfold
version = 0.3.3
url = https://github.com/JustWhit3/QUnfold
author = Gianluca Bianco, Simone Gasperini
author_email = biancogianluca9@gmail.com, simone.gasperini4@unibo.it
license = MIT
license_files = LICENSE
long_description_content_type = text/markdown
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires = file: requirements.txt
packages = find:
package_dir = =src

[options.packages.find]
where = src
